# WhatIf

./: .gitignore  API_REFERENCE.md  CLAUDE.md  COMPONENT_DIAGRAM.md  LICENSE  LLM_PROVIDER_GUIDE.md  PROJECT_INDEX.md  QUICK_REFERENCE.md  README.md  RULE_SET.md  USAGE_GUIDE.md  config.example  global.d.ts  llm_config.example.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  start.py  start_backend.py  start_backend.sh  tailwind.config.js  test_gemini_direct.py  test_o4_mini.py  tsconfig.app.json  vite.config.ts
apps/desktop/: README.md  package.json  pnpm-lock.yaml
backend/: .env.example  config.py  extract.py  llm_config.yaml  play.py  requirements.txt
backend/api/: app.py  deps.py  schemas.py
backend/api/routes/: extraction.py  game.py
backend/core/: __init__.py  llm.py  models.py
backend/core/prompts/: json_output_system.txt
backend/preprocessing/: base.py
backend/preprocessing/entity_transition/: __init__.py  batch_manager.py  cross_validator.py  (+7 more)
backend/runtime/: __init__.py  cli.py  game.py  game_logger.py
backend_services/app/: main.py
backend_services/tests/: __init__.py
data/: article_data.json  characters_data.json  storylines_data.json
docs/: CONTRIBUTING.md  README.md  anchor-service.md  api-reference.md  frontend.md  liquid-glass-react.md  llm-service.md
docs/liquid-glass-example/: bun.lockb  next.config.ts  package.json
frontend/: components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.tsx
src/: App.css  App.tsx  index.css
src/components/: AnchorContextDemo.tsx  AnchorServiceTest.tsx  GameDisplay.tsx  GameInitializer.tsx  GameReader.css  GameReader.tsx  GlassDialogueBox.tsx  GlassGameScreen.tsx  GlassMainMenu.tsx  InteractiveGameReader.tsx
src/hooks/: useGameStore.ts
src/services/: anchorService.ts  gameService.ts
src/stores/: gameStore.ts
tools/: log_analyzer.html
(+127 files in other folders)
