[tool.poetry]
name = "whatif-backend-services"
version = "0.1.0"
description = "Backend Services for WhatIf AI Galgame"
authors = ["WhatIf Team"]
readme = "README.md"
packages = [{include = "backend_services"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
langserve = "^0.3.0"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
langchain-text-splitters = "^0.3.0"
langchain-google-genai = "^2.1.8"
google-genai = "^1.0.0"
chromadb = "^0.5.0"
pyyaml = "^6.0.2"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
pydantic = "^2.11.0"
pydantic-settings = "^2.6.0"
httpx = "^0.28.0"
openai = "^1.95.1"
aiofiles = "^24.1.0"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.13.0"
pre-commit = "^3.6.0"

[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto" 